einstellung_derive/src/snapshots/einstellung_derive__test__output_default_values.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct NetworkConfig {
    #[config(default = ||"localhost".to_string())]
    host: String,
    #[config(default = 8080)]
    port: u16,
    #[config(default = ||std::time::Duration::from_secs(30))]
    timeout: std::time::Duration,
}

/// --- output ---
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct NetworkConfigPartial {
    host: ::core::option::Option<String>,
    port: ::core::option::Option<u16>,
    timeout: ::core::option::Option<std::time::Duration>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for NetworkConfigPartial {
    type Complete = NetworkConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            host: next.host.or(self.host),
            port: next.port.or(self.port),
            timeout: next.timeout.or(self.timeout),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(NetworkConfig {
            host: self.host.unwrap_or_else(|| "localhost".to_string()),
            port: self.port.unwrap_or(8080),
            timeout: self.timeout.unwrap_or_else(|| std::time::Duration::from_secs(30)),
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.host).is_some() {
            fields.push(::std::string::String::from("host"));
        }
        if (&self.port).is_some() {
            fields.push(::std::string::String::from("port"));
        }
        if (&self.timeout).is_some() {
            fields.push(::std::string::String::from("timeout"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.host).is_none() {
            fields.push(::std::string::String::from("host"));
        }
        if (&self.port).is_none() {
            fields.push(::std::string::String::from("port"));
        }
        if (&self.timeout).is_none() {
            fields.push(::std::string::String::from("timeout"));
        }
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for NetworkConfig {
    type Partial = NetworkConfigPartial;
}
