einstellung_derive/src/snapshots/einstellung_derive__test__output_documented_public_config.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
/// Public type whose generated API must also satisfy strict documentation policy.
#[deny(missing_docs)]
#[derive(Config)]
pub struct DocumentedConfig {
    /// Listening port retained on the partial field as well.
    pub port: u16,
}

/// --- output ---
///Partial configuration for the `DocumentedConfig` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
pub struct DocumentedConfigPartial {
    /// Listening port retained on the partial field as well.
    pub port: ::core::option::Option<u16>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for DocumentedConfigPartial {
    type Complete = DocumentedConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            port: next.port.or(self.port),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(DocumentedConfig {
            port: self
                .port
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("DocumentedConfig", "port"),
                    ),
                )?,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.port).is_some() {
            fields.push(::std::string::String::from("port"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for DocumentedConfig {
    type Partial = DocumentedConfigPartial;
}

// ---------------------------------

/// --- helper ---
/// Public module applies its documentation policy to every generated sibling.
#[deny(missing_docs)]
pub mod strict_api {
    use super::Config;
    /// Public configuration accepted by a strict downstream crate.
    #[derive(Config)]
    pub struct StrictConfig {
        /// Configured port.
        pub port: u16,
    }
}
