einstellung_derive/src/snapshots/einstellung_derive__test__output_duplicate_default_attribute.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    #[config(default = 8080, default = 9090)]
    port: u16,
}

/// --- output ---
::core::compile_error! {
    "Duplicate field `default`"
}
