einstellung_derive/src/snapshots/einstellung_derive__test__output_duplicate_deserialize_name.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    #[config(serde(rename = "port"))]
    http_port: u16,
    port: u16,
}

/// --- output ---
::core::compile_error! {
    "configuration key \"port\" is also used by field `http_port`"
}
