einstellung_derive/src/snapshots/einstellung_derive__test__output_duplicate_merge_attribute.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    #[config(merge = "extend", merge = "replace")]
    tags: Vec<String>,
}

/// --- output ---
::core::compile_error! {
    "Duplicate field `merge`"
}
