einstellung_derive/src/snapshots/einstellung_derive__test__output_empty_freezable_struct.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
#[config(freezable)]
struct Empty {}

/// --- output ---
///Partial configuration for the `Empty` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct EmptyPartial {}
#[automatically_derived]
impl ::einstellung::PartialConfig for EmptyPartial {
    type Complete = Empty;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {})
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Empty {})
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Freezable for EmptyPartial {
    fn freeze(self) -> Self {
        Self {}
    }
    fn is_frozen(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::einstellung::Config for Empty {
    type Partial = EmptyPartial;
}
