einstellung_derive/src/snapshots/einstellung_derive__test__output_flatten_without_subconfig.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct AppConfig {
    #[config(serde(flatten))]
    metadata: std::collections::HashMap<String, String>,
}

/// --- output ---
::core::compile_error! {
    "#[config(serde(flatten))] is only supported on #[config(subconfig)] fields"
}
